update endpoint
- Rebrand it as an "island hosting session" lookup rather than island lookup. This is due to the next point.
- Return the host's name.
- Stop returning the session ID as it is not useful.
- Return the start time of the session.
